--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             class="icon linkedin-icon"
             onclick="location.href='https://www.linkedin.com/in/partha01/'"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/partha01/">LinkedIn</a></p>
         </div>
       </div>
     </section>
