--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
       }
   </style>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PV5163DW56"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PV5163DW56');
+</script>
+
   </head>
   <body>
     <nav id="desktop-nav">
