--- a/index.html
+++ b/index.html
@@ -71,17 +71,6 @@
     <nav id="hamburger-nav">
       <div class="logo">Partha Santosh</div>
       <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-          <li>
             <img
               id="modeToggle2"
               class="icon color-icon"
@@ -90,8 +79,7 @@
               src-dark="./assets/theme_dark.png"
               alt="Color them icon"
             />
-          </li>
-        </div>
+
       </div>
     </nav>
     <section id="profile">
@@ -382,79 +370,64 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/credit card poster.jpg"
+                src="./assets/quiz poster.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Credit Card Interest Calculator</h2>
+            <h2 class="experience-sub-title project-title">Responsive-Quiz-with-API</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Parth0022/Credit-Card-Interest-Calculator.git'"
+                onclick="location.href='https://github.com/Parth0022/Responsive-Quiz-with-API'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/SMTP poster.jpg"
+                src="./assets/Calendar-Viewer-Component.jpg"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Contact Form utilizing Outlook SMTP</h2>
+            <h2 class="experience-sub-title project-title">Calendar Viewer Component</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Parth0022/SMTP-Contact-Form-.git'"
+                onclick="location.href='https://github.com/Parth0022/Calendar-Viewer-Component'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Parth0022/SMTP-Contact-Form-.git'"
-              >
-                Live Demo
-              </button>
+
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/resume uploader poster.jpg"
+                src="./assets/Password Generator.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Resume uploader utilizing Outlook SMTP</h2>
+            <h2 class="experience-sub-title project-title">Password-Generator</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Parth0022/Resume-Uploader.git'"
+                onclick="location.href='https://github.com/Parth0022/Password-Generator'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Parth0022/Resume-Uploader.git'"
-              >
-                Live Demo
-              </button>
+
             </div>
           </div>
         </div>
         <center>
-          <button class="btn btn-color-2" onclick="location.href='./#contact'">
-            View all Projects
+          <button class="btn btn-color-2" onclick="location.href='projects.html'">
+            View All
           </button>
         <center>
       </div>
