--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <meta property="og:title" content="Partha Santosh | Portfolio">
      <meta property="og:description" content="Explore the portfolio of Partha Santosh, a software engineer with expertise in various programming languages and frameworks.">
      <meta property="og:image" content="assets/parthasantosh2.jpg"> <!-- URL to a relevant image -->
-     <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with actual URL -->
+     <meta property="og:url" content="https://parth0022.github.io/"> <!-- Replace with actual URL -->
      <meta property="og:type" content="website">
  
      <!-- Twitter Card Meta Tags -->
