--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p><strong>Languages:</strong> Python, C/C++, Java, SQL (MS-SQL, MySQL), JavaScript, HTML, JSON, CSS</p>
   <p><strong>Frameworks:</strong> jQuery, React.JS</p>
   <p><strong>DevOps and API Tools:</strong> Git, Postman</p>
-  <p><strong>Others:</strong> Agile (Scrum/Kanban), Debugging</p>
+  <p><strong>Others:</strong> Agile (Scrum/Kanban), Debugging, Google Analytics</p>
 </div>
         <a href="assets/Partha Santosh Resume.pdf" download class="download-button" aria-label="Download file">Resume</a>
         <a href="https://link.springer.com/chapter/10.1007/978-981-97-2147-4_18" download class="download-button" aria-label="Download file">Published Paper</a>
